--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -238,7 +238,7 @@
                                         </button>
                                     </a>
                                     <a href="/views/personage_logic/create_personage.html?id={{personage.id}}">
-                                        <button class="btn btn-rounded btn-sm btn-info-outline margin-inline"><i
+                                        <button ng-hide="personage.generated" class="btn btn-rounded btn-sm btn-info-outline margin-inline"><i
                                                 class="fa fa-pencil"></i> Продолжить создание
                                         </button>
                                     </a>
