--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -772,7 +772,7 @@
                             </tr>
                             </thead>
                             <tbody class="mobile"
-                                   ng-repeat="item in attachedSkillsMixed | filter: attachedSkillsSearch">
+                                   ng-repeat="item in attachedSkillsMixed | filter: attachedSkillsSearch | orderBy:'attachedSkill.name'">
                             <tr class="mobile attached"
                                 ng-hide="filteredAttachedSkills(item)"
                                 ng-class="addNotAddedClass(item.personageAttachedSkill)">
@@ -982,7 +982,7 @@
                             </tr>
                             </thead>
                             <tbody class="mobile"
-                                   ng-repeat="triggerSkillMixed in triggerSkillsMixed | filter: triggerSkillsSearch">
+                                   ng-repeat="triggerSkillMixed in triggerSkillsMixed | filter: triggerSkillsSearch | orderBy:'triggerSkill.name'">
                             <tr class="mobile trigger"
                                 ng-hide="filteredTriggerSkills(triggerSkillMixed)"
                                 ng-class="addDisableOrNotAddedClass(triggerSkillMixed.available, triggerSkillMixed.personageTriggerSkill)">
@@ -1282,7 +1282,7 @@
                                 <th class="mobile"></th>
                             </tr>
                             </thead>
-                            <tbody class="mobile" ng-repeat="meritMixed in meritsMixed | filter: meritSearch">
+                            <tbody class="mobile" ng-repeat="meritMixed in meritsMixed | filter: meritSearch | orderBy:'merit.name'">
                             <tr class="mobile merit"
                                 ng-hide="filteredMerit(meritMixed)"
                                 ng-class="addDisableOrNotAddedClass(meritMixed.available, meritMixed.personageMerit)">
@@ -1372,7 +1372,7 @@
                                 <th class="mobile"></th>
                             </tr>
                             </thead>
-                            <tbody class="mobile" ng-repeat="item in flawsToShow | filter: flawSearch">
+                            <tbody class="mobile" ng-repeat="item in flawsToShow | filter: flawSearch | orderBy:'personageFlaw.Flaw.name'">
                             <tr class="mobile flaw">
                                 <td class="text-right mobile flaw"
                                     ng-click="showHideDescription(item.personageFlaw.Flaw)"
@@ -1490,7 +1490,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div ng-repeat="item in spellsBySchool" ng-hide="!item.added && !filter.schools">
+                        <div ng-repeat="item in spellsBySchool | orderBy:'school.name'" ng-hide="!item.added && !filter.schools">
                             <h3>{{item.school.name}}</h3>
                             <table class="table mobile">
                                 <thead class="mobile">
@@ -1505,7 +1505,7 @@
                                     <th></th>
                                 </tr>
                                 </thead>
-                                <tbody class="mobile" ng-repeat="spellItem in item.spells | filter: spellSearch">
+                                <tbody class="mobile" ng-repeat="spellItem in item.spells | filter: spellSearch | orderBy:'spell.name'">
                                 <tr class="mobile spells"
                                     ng-hide="spellItem.personageSpell == null && addedSpellsFilter"
                                     ng-class="addDisableOrNotAddedClass(item.added, spellItem.personageSpell)">
