--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1078,6 +1078,7 @@
                                         <div ng-if="triggerSkillMixed.personageTriggerSkill == null">
                                             <button class="btn btn-rounded btn-warning btn-sm"
                                                     href="javascript: void(0)"
+                                                    ng-disabled="triggerSkillMixed.available != true"
                                                     ng-click="addPersonageTriggerSkill(triggerSkillMixed.triggerSkill)">
                                                 Добавить
                                             </button>
